# Project_SFS_Chain

./: .gitignore  pyproject.toml
off_chain/: README.md  pyproject.toml  sfsMain.py
off_chain/configuration/: db_load_setting.py  db_setting.yaml  log_load_setting.yaml  log_setting.py
off_chain/database/: db_cnx_and_exec.py  script_database.sql  sfs_chain_database.db
off_chain/domain/entity/: certification_body_entity.py  company_entity.py  compensation_action_entity.py  composition_entity.py  credential_entity.py  operation_entity.py  product_entity.py  py_credential_entity.py  threshold_entity.py
off_chain/domain/repository/: certification_repository.py  company_repository.py  compensation_repository.py  credential_repository.py  database_repository.py  operation_repository.py  product_repository.py  py_credential_repository.py  py_product_repository.py  threshold_repository.py
off_chain/model/: product_model.py  py_credential_model.py  py_product_model.py
off_chain/persistence/repository_impl/: py_credential_repository_impl.py  py_product_repository_impl.py
off_chain/presentation/controller/: controller_autenticazione.py  controller_azienda.py  controller_certificatore.py  controller_company.py  controller_guest.py  controller_product.py  py_credential_controller.py  py_product_controller.py
off_chain/presentation/view/: company_menu.py  home_page_aziende.py  home_page_certificatore.py  home_page_guest.py  (+11 more)
off_chain/service/: py_credential_service.py  py_product_service.py
off_chain/test/: db_cnx_and_exec_test.py  settings_load_yaml_test.py
(+1 files in other folders)
